--- a/main.html
+++ b/main.html
@@ -11,6 +11,18 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+      <h2>Testimonials</h2>
+	<div>
+	<p id="sen">This product is amazing! I highly recommended it so anyone in need of a solution like this.</p>
+	<p id="john">-John Dow</p>
+	</div>
+
+	<div>
+	<p id="sen">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+	<p id="john">-Jane Smith</p>
+	</div>
+	
+	
 </body>
 
 </html>
