--- a/main.html
+++ b/main.html
@@ -11,7 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-      <h1>Testimonials</h1>
+     <div id="test">
+		 <h1>Testimonials</h1>
+	</div>
 	<div>
 	<p id="sen">This product is amazing! I highly recommended it so anyone in need of a solution like this.</p>
 	<p id="john">-John Dow</p>
